implemented tempdatacollection service.

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 //settings for the driver "com.mysql.jdbc.Driver"
-connection = jdbc:mysql://localhost:3306/raindata
+connection = jdbc:mysql://localhost:3306/tempdata
 user = root
 password =
